--- a/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
+++ b/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
@@ -5,8 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest1"
         mc:Ignorable="d"
-        Title="GradeOwnerForm" Height="450" Width="800">
+        Title="GradeOwnerForm" Height="597" Width="547">
     <Grid>
-        
+        <GroupBox Header="Cleanliness" Margin="245,42,139,447">
+            <StackPanel Orientation ="Horizontal" Height="57">
+                <RadioButton Content="1" />
+                <RadioButton Content="2" Margin="5,0,0,0" />
+                <RadioButton Content="3" Margin="5,0,0,0" />
+                <RadioButton Content="4" Margin="5,0,0,0" />
+                <RadioButton Content="5" Margin="5,0,0,0" />
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Header="Owner politeness" Margin="246,139,138,359">
+            <StackPanel Orientation ="Horizontal" Height="59">
+                <RadioButton Content="1" />
+                <RadioButton Content="2" Margin="5,0,0,0" />
+                <RadioButton Content="3" Margin="5,0,0,0" />
+                <RadioButton Content="4" Margin="5,0,0,0" />
+                <RadioButton Content="5" Margin="5,0,0,0" />
+            </StackPanel>
+        </GroupBox>
+        <Label Content="Owner of:" HorizontalAlignment="Left" Margin="44,34,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cbHotelName" HorizontalAlignment="Left" Margin="44,65,0,0" VerticalAlignment="Top" Width="120" Loaded="LoadHotels"/>
+        <Label Content="Comment:" HorizontalAlignment="Left" Margin="24,220,0,0" VerticalAlignment="Top"/>
+        <Label Content="ImageUrls:" HorizontalAlignment="Left" Margin="22,334,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="22,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="356" Height="80"/>
+        <TextBox x:Name="txtImg" HorizontalAlignment="Left" Margin="22,358,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="356" Height="20"/>
+        <Button x:Name="btnPlus" Content="+" HorizontalAlignment="Left" Margin="387,358,0,0" VerticalAlignment="Top" Width="20" Click="btnPlus_Click"/>
+        <Button x:Name="btnAddImage" Content="Add" HorizontalAlignment="Left" Margin="413,358,0,0" VerticalAlignment="Top" Click="btnAddImage_Click"/>
+        <Button x:Name="btnDeleteImage" Content="Delete" HorizontalAlignment="Left" Margin="445,358,0,0" VerticalAlignment="Top" Click="btnDeleteImage_Click"/>
+        <ListBox x:Name="ListViewImg" Margin="22,384,169,86"/>
+        <Button Content="Grade" HorizontalAlignment="Left" Margin="412,420,0,0" VerticalAlignment="Top" Click="Grade"/>
     </Grid>
 </Window>
