--- a/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
+++ b/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
@@ -9,8 +9,10 @@
     <Grid>
         <DataGrid x:Name="DataPanel" HorizontalAlignment="Center" Height="198" Margin="0,82,0,0" VerticalAlignment="Top" Width="458" Loaded="LoadData"/>
         <Label Content="Select a tour to start." HorizontalAlignment="Center" Height="28" Margin="0,36,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Start a tour" HorizontalAlignment="Center" Height="29" Margin="0,309,0,0" VerticalAlignment="Top" Width="96" RenderTransformOrigin="1.708,0.439"/>
+        <Button Content="Confirm arrival" HorizontalAlignment="Left" Height="29" Margin="495,333,0,0" VerticalAlignment="Top" Click="ConfirmArrival" Width="96" RenderTransformOrigin="1.708,0.439"/>
         <Button Content="Exit" HorizontalAlignment="Left" Height="27" Margin="687,367,0,0" VerticalAlignment="Top" Click="Exit" Width="61"/>
+        <DataGrid x:Name="KeyPoints" Margin="171,304,364,44"/>
+        <Button Content="Show Tour" HorizontalAlignment="Left" Height="26" Margin="651,234,0,0" VerticalAlignment="Top" Width="67" Click="Button_Click"/>
 
     </Grid>
 </Window>
