--- a/InitialProject/InitialProject/View/Owner/MoveReservationView.xaml
+++ b/InitialProject/InitialProject/View/Owner/MoveReservationView.xaml
@@ -7,11 +7,12 @@
         mc:Ignorable="d"
         Title="MoveReservation" Height="768" Width="1024" ResizeMode="NoResize" WindowStyle="SingleBorderWindow">
     <Grid>
-        <DataGrid x:Name="DataPanel" Margin="69,44,69,289" Loaded="OnLoad" SelectionChanged="ReservationInfo"/>
+        <DataGrid x:Name="DataPanel" Margin="69,44,69,289" Loaded="OnLoad"/>
         <Button Content="Accept" HorizontalAlignment="Left" Margin="69,479,0,0" VerticalAlignment="Top" Height="66" Width="161" FontSize="20" Click="AcceptMoveReservation"/>
         <Button Content="Decline" HorizontalAlignment="Left" Margin="247,479,0,0" VerticalAlignment="Top" Height="66" Width="162" FontSize="20" Click="DeclineMoveReservation"/>
         <Label x:Name="ReservationInfoLabel" Content="" HorizontalAlignment="Left" Margin="424,479,0,0" VerticalAlignment="Top" Height="66" Width="531"/>
         <Button Content="Cancel" HorizontalAlignment="Center" Margin="0,674,0,0" VerticalAlignment="Top" Height="28" Width="196" Click="Close"/>
+        <Button Content="Show Info" HorizontalAlignment="Left" Margin="69,569,0,0" VerticalAlignment="Top" Height="61" Width="161" Click="Button_Click" FontSize="20"/>
 
     </Grid>
 </Window>
