--- a/InitialProject/InitialProject/View/Owner/HotelGalery.xaml
+++ b/InitialProject/InitialProject/View/Owner/HotelGalery.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Owner"
         mc:Ignorable="d"
-        Title="HotelGalery" Height="392" Width="749">
+        WindowStartupLocation="CenterScreen"
+        Title="HotelGalery" Height="400" Width="800
+        ">
     <Grid>
-        <Button Content="Next" HorizontalAlignment="Left" Margin="523,322,0,0" VerticalAlignment="Top" Height="31" Width="92" Click="NextImage"/>
+        <Button Content="Next" HorizontalAlignment="Left" Margin="603,322,0,0" VerticalAlignment="Top" Height="31" Width="92" Click="NextImage"/>
         <Button Content="Preview" HorizontalAlignment="Left" Margin="132,322,0,0" VerticalAlignment="Top" Height="31" Width="87" Click="PreviewImage"/>
-        <Image x:Name="Image" HorizontalAlignment="Left" Height="256" Margin="132,35,0,0" VerticalAlignment="Top" Width="475"/>
+        <Image x:Name="Image" HorizontalAlignment="Left" Height="256" Margin="132,35,0,0" VerticalAlignment="Top" Width="562"/>
 
     </Grid>
 </Window>
