--- a/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Owner"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="OwnerProfil" Height="450" Width="800">
     <Grid Loaded="OnLoad">
         <Label x:Name="SuperOwnerLabel" Content="" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Width="268" FontSize="30" Loaded="SuperOwnerLabel_Loaded"/>
@@ -17,7 +18,7 @@
         <Button Content="Change" HorizontalAlignment="Left" Margin="521,0,0,0" VerticalAlignment="Center" Height="45" Width="113"/>
 
         <Button Content="Log Out" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="222" Click="LogOut" Canvas.Left="1081" Canvas.Top="203" FontSize="17" Margin="538,347,0,0"/>
-        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="74" Width="76" Click="Button_Click" Background="#FFF51414">
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="60" Width="76" Click="Button_Click" Background="#FFF51414">
 
         </Button>
 
