--- a/InitialProject/InitialProject/View/Owner/RenovationReview.xaml
+++ b/InitialProject/InitialProject/View/Owner/RenovationReview.xaml
@@ -9,7 +9,7 @@
       Title="RenovationReview">
 
     <Grid Background="white">
-        <Label Content="Renovation Review" HorizontalAlignment="Center" Margin="0,253,0,0" VerticalAlignment="Top" FontSize="100"/>
-
+        <DataGrid x:Name="DataPanel" Margin="53,40,47,86" Loaded="OnLoad"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="371,556,0,0" VerticalAlignment="Top" Height="40" Width="288" Click="CancelRenovation"/>
     </Grid>
 </Page>
