--- a/InitialProject/InitialProject/View/Guest1/Guest1Form.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1Form.xaml
@@ -1,42 +1,41 @@
-﻿<Window x:Class="TravelAgency.View.Guest1Form"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TravelAgency.View"
-        mc:Ignorable="d"
-        Title="Guest1Form" Height="355" Width="1088">
-    <Canvas>
-        
-        <Label Content="Name:" Canvas.Left="10" Canvas.Top="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Location:" Canvas.Left="10" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Type:" Canvas.Left="11" Canvas.Top="116" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Number of guests:" Canvas.Left="10" Canvas.Top="147" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Number of days for reservation:" Canvas.Left="10" Canvas.Top="182" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtName" Canvas.Left="59" TextWrapping="Wrap" Canvas.Top="42" Width="120"
-                 Text="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtCity" Canvas.Left="44" TextWrapping="Wrap" Canvas.Top="95" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                 Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox x:Name="txtNoGuests" Canvas.Left="118" TextWrapping="Wrap" Canvas.Top="152" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding Path=Max, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox x:Name="txtNoDays" Canvas.Left="187" TextWrapping="Wrap" Canvas.Top="187" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding Path=DaysLeft, UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Click="Search" Content="Search" Canvas.Left="17" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Button Content="Cancel" Canvas.Left="62" Canvas.Top="220" Click="Cancel" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <RadioButton x:Name="RadioHouse" Content="House" Canvas.Left="62" Canvas.Top="122" GroupName="type" HorizontalAlignment="Center" VerticalAlignment="Top">
-        </RadioButton>
-        <RadioButton x:Name="RadioHotel" Content="Hotel" Canvas.Left="186" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type">
-        </RadioButton>
-        <RadioButton x:Name="RadioApartment" Content="Apartment" Canvas.Left="250" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type">
-        </RadioButton>
-        <RadioButton x:Name="RadioHut" Content="Hut" Canvas.Left="130" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type">
-        </RadioButton>
-        <Label Content="City:" Canvas.Left="11" Canvas.Top="91" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Country:" Canvas.Left="166" Canvas.Top="91" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtCountry" Canvas.Left="228" TextWrapping="Wrap" Canvas.Top="95" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBox>
-        <DataGrid x:Name="DataPanel" AutoGenerateColumns="True" AutoGeneratingColumn="DataPanel_AutoGeneratingColumn" Height="264" Width="674" Canvas.Left="368" Canvas.Top="10"   
-                  ItemsSource="{Binding Path = Hotels}" SelectedItem="{Binding Path=SelectedHotel}" HorizontalAlignment="Left" VerticalAlignment="Center" Loaded="OnLoad">
-
-        </DataGrid>
+﻿<Page x:Class="TravelAgency.View.Guest1Form"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d" Height="575" Width="1590">
+    <Canvas Background="White">
+        <Label Content="Name:" FontSize="20" Canvas.Left="3" Canvas.Top="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Type:" FontSize="20" Canvas.Left="3" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Number of guests:" FontSize="20" Canvas.Left="1" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Number of days for reservation:" FontSize="20" Canvas.Left="3" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtName" TextWrapping="Wrap" FontSize="16"
+            Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Height="32" Canvas.Left="3" Canvas.Top="97" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtCity" TextWrapping="Wrap"  FontSize="16"
+            Text="{Binding City, UpdateSourceTrigger=PropertyChanged}" Height="32" Canvas.Left="3" Canvas.Top="176" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtNoGuests" TextWrapping="Wrap" FontSize="16"
+            Text="{Binding Max, UpdateSourceTrigger=PropertyChanged}" Height="32" RenderTransformOrigin="0.5,0.5" Canvas.Left="3" Canvas.Top="359" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.121"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBox x:Name="txtNoDays" TextWrapping="Wrap" Height="32" FontSize="16"
+            Text="{Binding DaysLeft, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="3" Canvas.Top="426" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button Click="Search" Content="Search"  FontSize="20" Canvas.Left="6" Canvas.Top="483" Height="40" Width="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioHouse" VerticalContentAlignment="Center" Content="House" GroupName="type" FontSize="20" Canvas.Left="59" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioHotel" VerticalContentAlignment="Center" Content="Hotel" GroupName="type" FontSize="20" Canvas.Left="247" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioApartment" VerticalContentAlignment="Center" Content="Apartment" GroupName="type" FontSize="20" Canvas.Left="344" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioHut" VerticalContentAlignment="Center" Content="Hut" GroupName="type" FontSize="20" Canvas.Left="162" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="City:" FontSize="20" Canvas.Left="3" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Country:" FontSize="20" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtCountry"  FontSize="16" TextWrapping="Wrap" Canvas.Left="3" Canvas.Top="253" Width="454" Height="32" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <DataGrid x:Name="DataPanel" AutoGenerateColumns="True" AutoGeneratingColumn="DataPanel_AutoGeneratingColumn"   
+            ItemsSource="{Binding Hotels}" SelectedItem="{Binding SelectedHotel}" Loaded="OnLoad" Height="410" Canvas.Left="594" Canvas.Top="58" Width="986" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Searched accommodations:" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Canvas.Left="594" Canvas.Top="16"/>
     </Canvas>
-</Window>
+</Page>
