--- a/InitialProject/InitialProject/View/ReservationForm.xaml
+++ b/InitialProject/InitialProject/View/ReservationForm.xaml
@@ -1,25 +1,28 @@
-﻿<Window x:Class="TravelAgency.View.ReservationForm"
+﻿<Page x:Class="TravelAgency.View.ReservationForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View"
-        mc:Ignorable="d"
-        Title="ReservationForm" Height="411" Width="436" Loaded="Window_Loaded">
-    <Grid Margin="0,0,10,5">
-        <Button x:Name="btnReserve" Content="Reserve" HorizontalAlignment="Left" Margin="144,233,0,0" VerticalAlignment="Top" Height="23" Width="56" Click="Reserve"/>
-        <Button x:Name="btnClose" Content="Cancel" HorizontalAlignment="Left" Margin="219,233,0,0" VerticalAlignment="Top" Height="23" Width="49" Click="Close"/>
-        <DatePicker x:Name="Date1" HorizontalAlignment="Left" Margin="144,74,0,0" VerticalAlignment="Top" Height="28" Width="127" SelectedDateChanged="Date1_SelectedDateChanged"/>
-        <DatePicker x:Name="Date2" HorizontalAlignment="Left" Margin="144,105,0,0" VerticalAlignment="Top" Height="29" Width="127" SelectedDateChanged="Date2_SelectedDateChanged"/>
-        <TextBox x:Name="txtNumberOfGuests" IsEnabled="false" HorizontalAlignment="Left" Margin="144,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="127" Height="21" LostFocus="txtNumberOfGuests_LostFocus"/>
-        <Label Content="Number of guests:" HorizontalAlignment="Left" Margin="28,163,0,0" VerticalAlignment="Top" Height="34" Width="116"/>
-        <Label Content="Start date:" HorizontalAlignment="Left" Margin="57,71,0,0" VerticalAlignment="Top" Height="31" Width="80"/>
-        <ComboBox  x:Name="HotelNameCB" HorizontalAlignment="Left" Margin="144,46,0,0" VerticalAlignment="Top" Width="127" Height="25" Loaded="LoadHotels" SelectionChanged="DefaultValuesForTXT"/>
-        <Label Content="End date:" HorizontalAlignment="Left" Margin="62,102,0,0" VerticalAlignment="Top" Height="30" Width="75"/>
-        <Label Content="Name:" HorizontalAlignment="Left" Margin="85,41,0,0" VerticalAlignment="Top" Height="30" Width="55"/>
-        <Label x:Name="validationLabel" Content="*Please fill all fields in the form before reservation" HorizontalAlignment="Left" Margin="144,202,0,0" VerticalAlignment="Top" Foreground="Red" Height="27" Width="275"/>
-        <TextBox x:Name="txtNumberOfDays" IsEnabled="false" HorizontalAlignment="Left" Margin="144,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="127" Height="21" LostFocus="txtNumberOfDays_LostFocus" TextChanged="txtNumberOfDays_TextChanged"/>
-        <Label Content="Number of days:" HorizontalAlignment="Left" Margin="28,136,0,0" VerticalAlignment="Top" Height="34" Width="116"/>
-
-    </Grid>
-</Window>
+        mc:Ignorable="d" Height="575" Width="1590">
+    <Canvas Background="White" Margin="0,0,0,0">
+        <Frame NavigationUIVisibility="Hidden" x:Name="ShowPage" Canvas.Top="0" Margin="0,0,0,0"/>
+        <Button x:Name="btnReserve" IsEnabled="False" Content="Make a reservation"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="195" Click="Reserve" Canvas.Left="698" Canvas.Top="261"/>
+        <DatePicker x:Name="Date1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" Height="32" Width="194" SelectedDateChanged="Date1_SelectedDateChanged" Canvas.Left="698" Canvas.Top="110"/>
+        <DatePicker x:Name="Date2" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" Height="32" Width="194" SelectedDateChanged="Date2_SelectedDateChanged" Canvas.Left="698" Canvas.Top="147"/>
+        <TextBox x:Name="txtNumberOfGuests" FontSize="16" IsEnabled="false" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="194" Height="32" LostFocus="txtNumberOfGuests_LostFocus" Canvas.Left="698" Canvas.Top="221" TextChanged="txtNumberOfGuests_TextChanged"/>
+        <Label Content="Number of guests:" HorizontalAlignment="Center" FontSize="20"  VerticalAlignment="Top" Height="auto" Width="auto" Canvas.Left="520" Canvas.Top="217"/>
+        <Label Content="Start date:" HorizontalAlignment="Center" FontSize="20"  VerticalAlignment="Top" Height="auto" Width="auto" Canvas.Left="593" Canvas.Top="104"/>
+        <ComboBox  x:Name="HotelNameCB" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" Width="195" Height="32" Loaded="LoadHotels" SelectionChanged="DefaultValuesForTXT" Canvas.Left="698" Canvas.Top="72"/>
+        <Label Content="End date:" HorizontalAlignment="Center" FontSize="20"  VerticalAlignment="Top" Height="auto" Width="auto" Canvas.Left="601" Canvas.Top="143"/>
+        <Label Content="Name:" HorizontalAlignment="Center" FontSize="20"  VerticalAlignment="Top" Height="auto" Width="auto" Canvas.Left="626" Canvas.Top="68"/>
+        <Label x:Name="validationLabel" FontSize="20"  Content="*Please fill in all fields before making a reservation" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Red" Height="44" Width="462" Canvas.Left="698" Canvas.Top="303"/>
+        <TextBox x:Name="txtNumberOfDays" FontSize="16" IsEnabled="false" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="194" Height="32" LostFocus="txtNumberOfDays_LostFocus" TextChanged="txtNumberOfDays_TextChanged" Canvas.Left="698" Canvas.Top="184"/>
+        <Label Content="Number of days:" FontSize="20"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="auto" Width="auto" Canvas.Left="537" Canvas.Top="179"/>
+        <Label x:Name="daysValidation" Content="validacija dana" FontSize="20" Canvas.Left="902" Canvas.Top="183" Foreground="Red" HorizontalAlignment="Left" Visibility="Collapsed" VerticalAlignment="Center"/>
+        <Label x:Name="dateValidation" Content="*Return date must be greater than departure date" FontSize="20" Canvas.Left="902" Canvas.Top="144" Foreground="Red" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label x:Name="dateValidationBefore" Content="*It is not possible to select a date before today" FontSize="20" Canvas.Left="902" Canvas.Top="107" Foreground="Red" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Label x:Name="guestsValidation" Content="validacija gostiju" FontSize="20" Canvas.Left="902" Canvas.Top="218" Foreground="Red" HorizontalAlignment="Left" Visibility="Collapsed" VerticalAlignment="Center"/>
+        <Label x:Name="suggestionLabel" Content="Label" FontSize="20" Foreground="Red" Visibility="Collapsed" Canvas.Left="698" Canvas.Top="327" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
+</Page>
